dist/logging/opensearch/dashboards/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboards
  namespace: logging
  labels:
    app.kubernetes.io/name: opensearch-dashboards
    app.kubernetes.io/component: log-ui
    app.kubernetes.io/owner: protogogos
spec:
  selector:
    app.kubernetes.io/name: opensearch-dashboards
  ports:
    - name: http
      port: 5601
      targetPort: 5601
