dist/logging/opensearch/dashboards/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-dashboards
  namespace: logging
  labels:
    app.kubernetes.io/name: opensearch-dashboards
    app.kubernetes.io/component: log-ui
    app.kubernetes.io/owner: protogogos
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "logs.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-dashboards
                port:
                  number: 5601
